gcc/testsuite/gdc.test/compilable/test11225a.d
/*
TEST_OUTPUT:
---
WORKS
---
*/

import imports.test11225b;
interface I {}
